[project]
name = "live-measurements-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py==2.1.0",
    "attrs==25.1.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "filelock==3.17.0",
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "flatbuffers==25.1.24",
    "fonttools==4.55.8",
    "fsspec==2025.2.0",
    "huggingface-hub==0.29.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jax==0.5.0",
    "jaxlib==0.5.0",
    "jinja2==3.1.5",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mediapipe==0.10.20",
    "ml-dtypes==0.5.1",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "opt-einsum==3.4.0",
    "packaging==24.2",
    "pillow==11.1.0",
    "protobuf==4.25.6",
    "pycparser==2.22",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scipy==1.15.1",
    "sentencepiece==0.2.0",
    "six==1.17.0",
    "sounddevice==0.5.1",
    "sympy==1.13.1",
    "timm==1.0.15",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
]
